Adicionados os ícones do header

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <!-- hamburguer menu -->
 
-            <img src="" class="hamburguer-menu" alt="Ícone para abrir e fechar o menu mobile">
+            <img src="../projeto-gamer/assets/icons/Menu button of three horizontal lines.png" class="hamburguer-menu" alt="Ícone para abrir e fechar o menu mobile">
 
             <img class="logo" src="../projeto-gamer/assets/images/Logo.png" alt="Logotipo da empresa Gamer. Texto Gamer com um joystick ao centro">
 
@@ -79,17 +79,17 @@
 
                 <!-- 3 dots menu (right) -->
 
-                <img src="" class="3-dots-menu" alt="Ícone 3 pontinhos, abre o menu de usuários">
+                <img src="../projeto-gamer/assets/icons/More.png" class="3-dots-menu" alt="Ícone 3 pontinhos, abre o menu de usuários">
 
                 <div class="user-menu">
                     <a href="">
-                        <img src="" alt="ícone do usuário">
+                        <img src="../projeto-gamer/assets/icons/User.png" alt="ícone do usuário">
                     </a>
                     <a href="">
-                        <img src="" alt="ícone da sacola">
+                        <img src="../projeto-gamer/assets/icons/Shopping bag.png" alt="ícone da sacola">
                     </a>
                     <a href="">
-                        <img src="" alt="ícone de pesquisa">
+                        <img src="../projeto-gamer/assets/icons/Loupe.png" alt="ícone de pesquisa">
                     </a>
                 </div>
         </div>
