--- a/index.html
+++ b/index.html
@@ -13,85 +13,98 @@
     <header>
 
         <div class="header-top">
-
-            <div class="contacts">
-                <div class="phone">
-                    <img src="../projeto-gamer/assets/icons/call.png" alt="Ícone do telefone">
-                    <span>(11) 0900-1010</span>
-                </div>
-                <div class="email">
-                    <img src="../projeto-gamer/assets/icons/sms.png" alt="Ícone do email">
-                    <span>contato@gamer.com.br</span>
-                </div>
-            </div>
-
-            <div class="social-media">
-                <a href="">
-                    <img src="../projeto-gamer/assets/icons/Facebook.png" alt="Ícone do link do Facebook">
-                </a>
-                <a href="">
-                    <img src="../projeto-gamer/assets/icons/Linkedin.png" alt="Ícone do link do Linkedin">
-                </a>
-                <a href="">
-                    <img src="../projeto-gamer/assets/icons/Instagram.png" alt="Ícone do link do Instagram">
-                </a>
-            </div>
-
-        </div>
-
-        <div class="header-bottom">
-
-            <!-- hamburguer menu -->
-
-            <img src="../projeto-gamer/assets/icons/Menu button of three horizontal lines.png" class="hamburguer-menu" alt="Ícone para abrir e fechar o menu mobile">
-
-            <img class="logo" src="../projeto-gamer/assets/images/Logo.png" alt="Logotipo da empresa Gamer. Texto Gamer com um joystick ao centro">
-
-            <nav class="menu">
-                <a href="">Início</a>
-                <a href="">Jogadores</a>
-                <a href="">Equipes</a>
-                <a href="">Notícias</a>
-
-                <!-- visível apenas no mobile -->
-
-                <div class="phone">
-                    <img src="../projeto-gamer/assets/icons/call.png" alt="Ícone do telefone">
-                    <span>(11) 0900-1010</span>
-                </div>
-
-                <div class="email">
-                    <img src="../projeto-gamer/assets/icons/sms.png" alt="Ícone do email">
-                    <span>contato@gamer.com.br</span>
+            <div class="layout-grid">
+                <div class="contacts">
+                    <div class="phone">
+                        <img src="../assets/icons/call.png" alt="Ícone do telefone">
+                        <span>(11) 0900-1010</span>
+                    </div>
+                    <div class="email">
+                        <img src="../assets/icons/sms.png" alt="Ícone do email">
+                        <span>contato@gamer.com.br</span>
+                    </div>
                 </div>
 
                 <div class="social-media">
                     <a href="">
-                        <img src="../projeto-gamer/assets/icons/Facebook.png" alt="Ícone do link do Facebook">
+                        <img src="../assets/icons/Facebook.png" alt="Ícone do link do Facebook">
                     </a>
                     <a href="">
-                        <img src="../projeto-gamer/assets/icons/Linkedin.png" alt="Ícone do link do Linkedin">
+                        <img src="../assets/icons/Linkedin.png" alt="Ícone do link do Linkedin">
                     </a>
                     <a href="">
-                        <img src="../projeto-gamer/assets/icons/Instagram.png" alt="Ícone do link do Instagram">
+                        <img src="../assets/icons/Instagram.png" alt="Ícone do link do Instagram">
                     </a>
                 </div>
+            </div>
+        </div>
+
+        <div class="header-bottom">
+            <div class="layout-grid between-center-alignment">
+
+                <!-- hamburguer menu -->
+                <a href="">
+                    <img src="../assets/icons/Menu button of three horizontal lines.png" class="hamburguer-menu" alt="Ícone para abrir e fechar o menu mobile">
+                </a>
+
+                <!-- logotype -->
+                <a href="">
+                    <img class="logo" src="../assets/images/Logo.png" alt="Logotipo da empresa Gamer. Texto Gamer com um joystick ao centro">
+                </a>
+                
+                <!-- mobile lateral user menu -->
+                <a href="">
+                    <img src="./assets/icons/More.png" alt="Botão que abre e fecha o menu de usuário">
+                </a>
+
+                <nav class="menu">
+                    <a href="">Início</a>
+                    <a href="">Jogadores</a>
+                    <a href="">Equipes</a>
+                    <a href="">Notícias</a>
+
+                    <!-- visível apenas no mobile -->
+
+                    <div class="contacts">
+                        <div class="phone">
+                            <img src="../assets/icons/call.png" alt="Ícone do telefone">
+                            <span>(11) 0900-1010</span>
+                        </div>
+                        <div class="email">
+                            <img src="../assets/icons/sms.png" alt="Ícone do email">
+                            <span>contato@gamer.com.br</span>
+                        </div>
+                    </div>
+
+                    <div class="social-media">
+                        <a href="">
+                            <img src="../assets/icons/Facebook.png" alt="Ícone do link do Facebook">
+                        </a>
+                        <a href="">
+                            <img src="../assets/icons/Linkedin.png" alt="Ícone do link do Linkedin">
+                        </a>
+                        <a href="">
+                            <img src="../assets/icons/Instagram.png" alt="Ícone do link do Instagram">
+                        </a>
+                    </div>
+
+                </nav>
 
                 <!-- 3 dots menu (right) -->
 
-                <img src="../projeto-gamer/assets/icons/More.png" class="3-dots-menu" alt="Ícone 3 pontinhos, abre o menu de usuários">
-
                 <div class="user-menu">
                     <a href="">
-                        <img src="../projeto-gamer/assets/icons/User.png" alt="ícone do usuário">
+                        <img src="../assets/icons/User.png" alt="ícone do usuário">
                     </a>
                     <a href="">
-                        <img src="../projeto-gamer/assets/icons/Shopping bag.png" alt="ícone da sacola">
+                        <img src="../assets/icons/Shopping bag.png" alt="ícone da sacola">
                     </a>
                     <a href="">
-                        <img src="../projeto-gamer/assets/icons/Loupe.png" alt="ícone de pesquisa">
+                        <img src="../assets/icons/Loupe.png" alt="ícone de pesquisa">
                     </a>
                 </div>
+            </div>
+
         </div>
 
     </header>
