Inicio do banner

--- a/index.html
+++ b/index.html
@@ -106,13 +106,20 @@
 
     </header>
 
-    <section class="banner"></section>
+    <main>
 
-    <section class="card"></section>
+        <section class="banner">
+            <h1>Liga Gamers</h1>
+            <button class="botao-sobre">Sobre</button>
+        </section>
+    
+        <section class="card"></section>
+    
+        <section class="info"></section>
 
-    <section class="info"></section>
+        <section class="news"></section>
 
-    <section class="news"></section>
+    </main>
 
     <footer></footer>
 
