Section 'Cards' pronta

--- a/index.html
+++ b/index.html
@@ -110,10 +110,13 @@
 
         <section class="banner">
             <h1>Liga Gamers</h1>
-            <button class="botao-sobre">Sobre</button>
+            <a href="" class="botao-sobre">Sobre</a>
         </section>
     
-        <section class="card"></section>
+        <section class="cards">
+            <img src="./assets/images/fifa23.png" alt="Imagem do jogo Fifa 23">
+            <img src="./assets/images/cszin.png" alt="Imagem do jogo Counter Strike">
+        </section>
     
         <section class="info"></section>
 
