Section 'Info' pronta e banner corrigido

--- a/index.html
+++ b/index.html
@@ -113,12 +113,39 @@
             <a href="" class="botao-sobre">Sobre</a>
         </section>
     
-        <section class="cards">
+        <section class="games">
             <img src="./assets/images/fifa23.png" alt="Imagem do jogo Fifa 23">
             <img src="./assets/images/cszin.png" alt="Imagem do jogo Counter Strike">
         </section>
     
-        <section class="info"></section>
+        <section class="info">
+            <div class="layout-grid flex">
+
+                <h2>Entre para o time progamer</h2>
+
+                <hr>
+
+                <div class="first-card-container">
+                    <img class="killjoy" src="./assets/images/killjoy.png" alt="Personagem do jogo Valorant Killjoy">
+                    <article class="card">
+                        <img class="card-icon" src="./assets/icons/Video console.png" alt="Icone de joystick">
+                        <h3 class="card-title">20 jogos diferentes</h3>
+                        <p class="card-text">São mais de 20 jogos em 2 plataformas dispóniveis para que você possa aprender melhores técnicas.</p>
+                    </article>
+                </div>
+
+                <div class="second-card-container">
+                    <img class="jinx" src="./assets/images/jinx.png" alt="Personagem do jogo League of Legends Jinx ">
+                    <article class="card">
+                        <img class="card-icon" src="./assets/icons/Gamer.png" alt="Icone de joagdor">
+                        <h3 class="card-title">53 professores</h3>
+                        <p class="card-text">Temos 53 Proplayers no nosso time para ensinar todas as estratégias, você vai aprender do básico ao avançado. Tempo de treinamento, descanso, equipamentos. </p>
+                    </article>
+                </div>
+
+            </div>
+
+        </section>
 
         <section class="news"></section>
 
