Main do desktop pronta

--- a/pages/index.html
+++ b/pages/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/desktop-style.css" media="(min-width: 1200px)">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/desktop-style.css" media="(min-width: 1024px)">
     <title>Projeto Gamer</title>
 </head>
 
@@ -118,8 +118,8 @@
         </section>
 
         <section class="games">
-            <img src="./assets/images/fifa23.png" alt="Imagem do jogo Fifa 23">
-            <img src="./assets/images/cszin.png" alt="Imagem do jogo Counter Strike">
+            <img src="../assets/images/fifa23.png" alt="Imagem do jogo Fifa 23">
+            <img src="../assets/images/cszin.png" alt="Imagem do jogo Counter Strike">
         </section>
 
         <section class="info">
@@ -129,24 +129,31 @@
 
                 <hr>
 
-                <div class="first-card-container">
-                    <img class="killjoy" src="./assets/images/killjoy.png" alt="Personagem do jogo Valorant Killjoy">
-                    <article class="card">
-                        <img class="card-icon" src="./assets/icons/Video console.png" alt="Icone de joystick">
-                        <h3 class="card-title">20 jogos diferentes</h3>
-                        <p class="card-text">São mais de 20 jogos em 2 plataformas dispóniveis para que você possa
-                            aprender melhores técnicas.</p>
-                    </article>
-                </div>
+                <div class="cards-container">
 
-                <div class="second-card-container">
-                    <img class="jinx" src="./assets/images/jinx.png" alt="Personagem do jogo League of Legends Jinx ">
-                    <article class="card">
-                        <img class="card-icon" src="./assets/icons/Gamer.png" alt="Icone de joagdor">
-                        <h3 class="card-title">53 professores</h3>
-                        <p class="card-text">Temos 53 Proplayers no nosso time para ensinar todas as estratégias, você
-                            vai aprender do básico ao avançado. Tempo de treinamento, descanso, equipamentos. </p>
-                    </article>
+                    <div class="first-card-container">
+                        <img class="killjoy" src="../assets/images/killjoy.png"
+                            alt="Personagem do jogo Valorant Killjoy">
+                        <article class="card">
+                            <img class="card-icon" src="../assets/icons/Video console.png" alt="Icone de joystick">
+                            <h3 class="card-title">20 jogos diferentes</h3>
+                            <p class="card-text">São mais de 20 jogos em 2 plataformas dispóniveis para que você possa
+                                aprender melhores técnicas.</p>
+                        </article>
+                    </div>
+
+                    <div class="second-card-container">
+                        <img class="jinx" src="../assets/images/jinx.png"
+                            alt="Personagem do jogo League of Legends Jinx ">
+                        <article class="card">
+                            <img class="card-icon" src="../assets/icons/Gamer.png" alt="Icone de joagdor">
+                            <h3 class="card-title">53 professores</h3>
+                            <p class="card-text">Temos 53 Proplayers no nosso time para ensinar todas as estratégias,
+                                você
+                                vai aprender do básico ao avançado. Tempo de treinamento, descanso, equipamentos. </p>
+                        </article>
+                    </div>
+
                 </div>
 
             </div>
@@ -162,7 +169,7 @@
 
                 <div class="layout-boxes">
                     <article class="box-1">
-                        <img class="box-image-1" src="./assets/images/estudio-riot-games.png"
+                        <img class="box-image-1" src="../assets/images/estudio-riot-games.png"
                             alt="Imagem do estudio da Riot Games">
                         <h3 class="box-title-1">New's Title</h3>
                         <p class="box-text-1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -170,7 +177,7 @@
                     </article>
 
                     <article class="box-2">
-                        <img class="box-image-2" src="./assets/images/ss-e-sports.png"
+                        <img class="box-image-2" src="../assets/images/ss-e-sports.png"
                             alt="Imagem da equipe SS E-Sports">
                         <h3 class="box-title-2">New's Title</h3>
                         <p class="box-text-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -178,14 +185,14 @@
                     </article>
 
                     <article class="box-3">
-                        <img class="box-image-3" src="./assets/images/loud.png" alt="Imagem da equipe Loud">
+                        <img class="box-image-3" src="../assets/images/loud.png" alt="Imagem da equipe Loud">
                         <h3 class="box-title-3">New's Title</h3>
                         <p class="box-text-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                             Lorem Ipsum has been the industry's standard dummy text ever since.</p>
                     </article>
 
                     <article class="box-4">
-                        <img class="box-image-4" src="./assets/images/vct-br-22.png"
+                        <img class="box-image-4" src="../assets/images/vct-br-22.png"
                             alt="Imagem da arena da Valorant Champions Tour 2022">
                         <h3 class="box-title-4">New's Title</h3>
                         <p class="box-text-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -193,7 +200,7 @@
                     </article>
 
                     <article class="box-1">
-                        <img class="box-image-1" src="./assets/images/estudio-riot-games.png"
+                        <img class="box-image-1" src="../assets/images/estudio-riot-games.png"
                             alt="Imagem do estudio da Riot Games">
                         <h3 class="box-title-1">New's Title</h3>
                         <p class="box-text-1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -201,7 +208,7 @@
                     </article>
 
                     <article class="box-2">
-                        <img class="box-image-2" src="./assets/images/ss-e-sports.png"
+                        <img class="box-image-2" src="../assets/images/ss-e-sports.png"
                             alt="Imagem da equipe SS E-Sports">
                         <h3 class="box-title-2">New's Title</h3>
                         <p class="box-text-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -209,14 +216,14 @@
                     </article>
 
                     <article class="box-3">
-                        <img class="box-image-3" src="./assets/images/loud.png" alt="Imagem da equipe Loud">
+                        <img class="box-image-3" src="../assets/images/loud.png" alt="Imagem da equipe Loud">
                         <h3 class="box-title-3">New's Title</h3>
                         <p class="box-text-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                             Lorem Ipsum has been the industry's standard dummy text ever since.</p>
                     </article>
 
                     <article class="box-4">
-                        <img class="box-image-4" src="./assets/images/vct-br-22.png"
+                        <img class="box-image-4" src="../assets/images/vct-br-22.png"
                             alt="Imagem da arena da Valorant Champions Tour 2022">
                         <h3 class="box-title-4">New's Title</h3>
                         <p class="box-text-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -233,10 +240,11 @@
     <footer>
         <div class="layout-grid footer-top">
             <div id="about">
-                <img src="./assets/images/Logo.png"
+                <img src="../assets/images/Logo.png" class="logotype"
                     alt="Logotipo da empresa Gamer. Texto Gamer com um joystick ao centro">
 
-                <p>Nosso sucesso na criação de soluções de negócios se deve em grande parte à nossa equipe talentosa e
+                <p>Nosso sucesso na criação de soluções de negócios se deve em grande parte à nossa equipe talentosa
+                    e
                     altamente comprometida.</p>
 
                 <div class="social-media-footer">
@@ -315,7 +323,7 @@
         <div class="layout-grid footer-bottom">
 
             <button onclick="clickReturnTop()" class="return-top-button yellow-button">
-                <img src="./assets/icons/icons-footer/back-to-top.svg"
+                <img src="../assets/icons/icons-footer/back-to-top.svg"
                     alt="Uma seta que aponta para cima e indica um botão de retorno para o topo da página">
             </button>
 
