--- a/pages/login.html
+++ b/pages/login.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/index-style.css">
-    <link rel="stylesheet" href="../styles/index-desktop-style.css" media="(min-width: 1024px)">
-    <title>Index - Projeto Gamer</title>
+    <link rel="stylesheet" href="/styles/login-style.css">
+    <link rel="stylesheet" href="/styles/login-desktop-style.css" media="(min-width: 1024px)">
+    <title>Login - Projeto Gamer</title>
 </head>
-
 <body>
-
+    
     <header>
 
         <div class="header-top">
@@ -110,134 +108,10 @@
 
     </header>
 
-    <main>
-
-        <section class="banner">
-            <h1>Liga Gamers</h1>
-            <a href="" class="botao-sobre">Sobre</a>
-        </section>
-
-        <section class="games">
-            <img src="../assets/images/fifa23.png" alt="Imagem do jogo Fifa 23">
-            <img src="../assets/images/cszin.png" alt="Imagem do jogo Counter Strike">
-        </section>
-
-        <section class="info">
-            <div class="layout-grid flex">
-
-                <h2>Entre para o time progamer</h2>
-
-                <hr>
-
-                <div class="cards-container">
-
-                    <div class="first-card-container">
-                        <img class="killjoy" src="../assets/images/killjoy.png"
-                            alt="Personagem do jogo Valorant Killjoy">
-                        <article class="card">
-                            <img class="card-icon" src="../assets/icons/Video console.png" alt="Icone de joystick">
-                            <h3 class="card-title">20 jogos diferentes</h3>
-                            <p class="card-text">São mais de 20 jogos em 2 plataformas dispóniveis para que você possa
-                                aprender melhores técnicas.</p>
-                        </article>
-                    </div>
-
-                    <div class="second-card-container">
-                        <img class="jinx" src="../assets/images/jinx.png"
-                            alt="Personagem do jogo League of Legends Jinx ">
-                        <article class="card">
-                            <img class="card-icon" src="../assets/icons/Gamer.png" alt="Icone de joagdor">
-                            <h3 class="card-title">53 professores</h3>
-                            <p class="card-text">Temos 53 Proplayers no nosso time para ensinar todas as estratégias,
-                                você
-                                vai aprender do básico ao avançado. Tempo de treinamento, descanso, equipamentos. </p>
-                        </article>
-                    </div>
-
-                </div>
-
-            </div>
-
-        </section>
-
-        <section class="news">
-            <div class="layout-grid flex">
-
-                <h2>Notícias</h2>
-
-                <hr>
-
-                <div class="layout-boxes">
-                    <article class="box-1">
-                        <img class="box-image-1" src="../assets/images/estudio-riot-games.png"
-                            alt="Imagem do estudio da Riot Games">
-                        <h3 class="box-title-1">New's Title</h3>
-                        <p class="box-text-1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    </article>
-
-                    <article class="box-2">
-                        <img class="box-image-2" src="../assets/images/ss-e-sports.png"
-                            alt="Imagem da equipe SS E-Sports">
-                        <h3 class="box-title-2">New's Title</h3>
-                        <p class="box-text-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    </article>
-
-                    <article class="box-3">
-                        <img class="box-image-3" src="../assets/images/loud.png" alt="Imagem da equipe Loud">
-                        <h3 class="box-title-3">New's Title</h3>
-                        <p class="box-text-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    </article>
-
-                    <article class="box-4">
-                        <img class="box-image-4" src="../assets/images/vct-br-22.png"
-                            alt="Imagem da arena da Valorant Champions Tour 2022">
-                        <h3 class="box-title-4">New's Title</h3>
-                        <p class="box-text-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    </article>
-
-                    <article class="box-1">
-                        <img class="box-image-1" src="../assets/images/estudio-riot-games.png"
-                            alt="Imagem do estudio da Riot Games">
-                        <h3 class="box-title-1">New's Title</h3>
-                        <p class="box-text-1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    </article>
-
-                    <article class="box-2">
-                        <img class="box-image-2" src="../assets/images/ss-e-sports.png"
-                            alt="Imagem da equipe SS E-Sports">
-                        <h3 class="box-title-2">New's Title</h3>
-                        <p class="box-text-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    </article>
-
-                    <article class="box-3">
-                        <img class="box-image-3" src="../assets/images/loud.png" alt="Imagem da equipe Loud">
-                        <h3 class="box-title-3">New's Title</h3>
-                        <p class="box-text-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    </article>
-
-                    <article class="box-4">
-                        <img class="box-image-4" src="../assets/images/vct-br-22.png"
-                            alt="Imagem da arena da Valorant Champions Tour 2022">
-                        <h3 class="box-title-4">New's Title</h3>
-                        <p class="box-text-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                            Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    </article>
-                </div>
-
-            </div>
-
-        </section>
-
-    </main>
+    <main></main>
 
     <footer>
+
         <div class="layout-grid footer-top">
             <div id="about">
                 <img src="../assets/images/Logo.png" class="logotype"
@@ -347,5 +221,4 @@
     </script>
 
 </body>
-
 </html>
