Páginas de login mobile e desktop prontas

--- a/pages/login.html
+++ b/pages/login.html
@@ -107,8 +107,26 @@
         </div>
 
     </header>
-
-    <main></main>
+ 
+    <main>
+        <form action="" class="login-box">
+            <div class="login-box-title">
+                <h1>Login</h1>
+                <hr>
+            </div>
+            <div class="inputs">
+                <div class="email-input">
+                    <img src="../assets/icons/icons-login/user-input.png" alt="Ícone de usuário, simboliza o e-mail do usuário">
+                    <input type="email" name="email" id="email-login" placeholder="Digite seu e-mail:">
+                </div>
+                <div class="password-input">
+                    <img src="../assets/icons/icons-login/Key.png" alt="Ícone de chave, simboliza a senha do usuário">
+                    <input type="password" name="password" id="password-login" placeholder="Digite sua senha:">
+                </div>
+            </div>
+            <button class="login-button" type="submit">Logar</button>
+        </form>
+    </main>
 
     <footer>
 
