--- a/pages/teams.html
+++ b/pages/teams.html
@@ -127,6 +127,38 @@
             </div>
             <button class="team-sign-in-button" type="submit">Cadastrar</button>
         </form>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Nome</th>
+                    <th>Foto</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="id-td">1</td>
+                    <td class="name-td">Loud</td>
+                    <td><img class="loud-img" src="../assets/images/profile-image.png" alt=""></td>
+                    <td><img class="yellow-trash" src="../assets/icons/garbage-can.svg" alt=""></td>
+                </tr>
+                <tr>
+                    <td class="id-td">1</td>
+                    <td class="name-td">Loud</td>
+                    <td><img class="loud-img" src="../assets/images/profile-image.png"alt=""></td>
+                    <td><img class="yellow-trash" src="../assets/icons/garbage-can.svg" alt=""></td>
+                </tr>
+                <tr>
+                    <td class="id-td">1</td>
+                    <td class="name-td">Loud</td>
+                    <td><img class="loud-img" src="../assets/images/profile-image.png" alt=""></td>
+                    <td><img class="yellow-trash" src="../assets/icons/garbage-can.svg" alt=""></td>
+                </tr>
+            </tbody>
+        </table>
+
     </main>
 
     <footer>
