Cadstro de jogadores prontas no mobile e no desktop

--- a/pages/players.html
+++ b/pages/players.html
@@ -152,20 +152,20 @@
             <tbody>
                 <tr>
                     <td class="id-td">1</td>
-                    <td class="name-td">Loud</td>
-                    <td><img class="loud-img" src="../assets/images/profile-image.png" alt=""></td>
+                    <td class="name-td">João</td>
+                    <td class="email-td">joão@gmail.com</td>
                     <td><img class="yellow-trash" src="../assets/icons/garbage-can.svg" alt=""></td>
                 </tr>
                 <tr>
                     <td class="id-td">1</td>
-                    <td class="name-td">Loud</td>
-                    <td><img class="loud-img" src="../assets/images/profile-image.png" alt=""></td>
+                    <td class="name-td">João</td>
+                    <td class="email-td">joão@gmail.com</td>
                     <td><img class="yellow-trash" src="../assets/icons/garbage-can.svg" alt=""></td>
                 </tr>
                 <tr>
                     <td class="id-td">1</td>
-                    <td class="name-td">Loud</td>
-                    <td><img class="loud-img" src="../assets/images/profile-image.png" alt=""></td>
+                    <td class="name-td">João</td>
+                    <td class="email-td">joão@gmail.com</td>
                     <td><img class="yellow-trash" src="../assets/icons/garbage-can.svg" alt=""></td>
                 </tr>
             </tbody>
