--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 
 
                 <nav class="menu" id="menu">
-                    <a href="">Início</a>
-                    <a href="">Jogadores</a>
-                    <a href="">Equipes</a>
-                    <a href="">Notícias</a>
+                    <a href="./index.html">Início</a>
+                    <a href="./pages/players.html">Jogadores</a>
+                    <a href="./pages/teams.html">Equipes</a>
+                    <a href="./index.html#news-section">Notícias</a>
 
                     <!-- visível apenas no mobile -->
 
@@ -160,7 +160,7 @@
 
         </section>
 
-        <section class="news">
+        <section class="news" id="news-section">
             <div class="layout-grid flex">
 
                 <h2>Notícias</h2>
@@ -268,19 +268,19 @@
 
                 <ul class="ul-configs">
                     <li>
-                        <a href="">Início</a>
+                        <a href="./index.html">Início</a>
                     </li>
                     <li>
-                        <a href="">Jogadores</a>
+                        <a href="./pages/players.html">Jogadores</a>
                     </li>
                     <li>
-                        <a href="">Equipes</a>
+                        <a href="./pages/teams.html">Equipes</a>
                     </li>
                     <li>
-                        <a href="">Notícias</a>
+                        <a href="./index.html#news-section">Notícias</a>
                     </li>
                     <li>
-                        <a href="">Login</a>
+                        <a href="./pages/login.html">Login</a>
                     </li>
                 </ul>
             </div>
