--- a/pages/login.html
+++ b/pages/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,9 @@
     <link rel="stylesheet" href="/styles/login-desktop-style.css" media="(min-width: 1024px)">
     <title>Login - Projeto Gamer</title>
 </head>
+
 <body>
-    
+
     <header>
 
         <div class="header-top">
@@ -58,10 +60,10 @@
 
 
                 <nav class="menu" id="menu">
-                    <a href="">Início</a>
-                    <a href="">Jogadores</a>
-                    <a href="">Equipes</a>
-                    <a href="">Notícias</a>
+                    <a href="../index.html">Início</a>
+                    <a href="../pages/players.html">Jogadores</a>
+                    <a href="../pages/teams.html">Equipes</a>
+                    <a href="../index.html#news-section">Notícias</a>
 
                     <!-- visível apenas no mobile -->
 
@@ -107,7 +109,7 @@
         </div>
 
     </header>
- 
+
     <main>
         <form action="" class="login-box">
             <div class="login-box-title">
@@ -116,7 +118,8 @@
             </div>
             <div class="inputs">
                 <div class="email-input">
-                    <img src="../assets/icons/icons-login/user-input.png" alt="Ícone de usuário, simboliza o e-mail do usuário">
+                    <img src="../assets/icons/icons-login/user-input.png"
+                        alt="Ícone de usuário, simboliza o e-mail do usuário">
                     <input type="email" name="email" id="email-login" placeholder="Digite seu e-mail:">
                 </div>
                 <div class="password-input">
@@ -160,19 +163,19 @@
 
                 <ul class="ul-configs">
                     <li>
-                        <a href="">Início</a>
+                        <a href="../index.html">Início</a>
                     </li>
                     <li>
-                        <a href="">Jogadores</a>
+                        <a href="../pages/players.html">Jogadores</a>
                     </li>
                     <li>
-                        <a href="">Equipes</a>
+                        <a href="../pages/teams.html">Equipes</a>
                     </li>
                     <li>
-                        <a href="">Notícias</a>
+                        <a href="../index.html#news-section">Notícias</a>
                     </li>
                     <li>
-                        <a href="">Login</a>
+                        <a href="../pages/login.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -239,4 +242,5 @@
     </script>
 
 </body>
+
 </html>
