--- a/pages/teams.html
+++ b/pages/teams.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,9 @@
     <link rel="stylesheet" href="/styles/teams-desktop-style.css" media="(min-width: 1024px)">
     <title>Cadastro de Equipes - Projeto Gamer</title>
 </head>
+
 <body>
-    
+
     <header>
 
         <div class="header-top">
@@ -58,10 +60,10 @@
 
 
                 <nav class="menu" id="menu">
-                    <a href="">Início</a>
-                    <a href="">Jogadores</a>
-                    <a href="">Equipes</a>
-                    <a href="">Notícias</a>
+                    <a href="../index.html">Início</a>
+                    <a href="../pages/players.html">Jogadores</a>
+                    <a href="../pages/teams.html">Equipes</a>
+                    <a href="../index.html#news-section">Notícias</a>
 
                     <!-- visível apenas no mobile -->
 
@@ -147,7 +149,7 @@
                 <tr>
                     <td class="id-td">1</td>
                     <td class="name-td">Loud</td>
-                    <td><img class="loud-img" src="../assets/images/profile-image.png"alt=""></td>
+                    <td><img class="loud-img" src="../assets/images/profile-image.png" alt=""></td>
                     <td><img class="yellow-trash" src="../assets/icons/garbage-can.svg" alt=""></td>
                 </tr>
                 <tr>
@@ -193,19 +195,19 @@
 
                 <ul class="ul-configs">
                     <li>
-                        <a href="">Início</a>
+                        <a href="../index.html">Início</a>
                     </li>
                     <li>
-                        <a href="">Jogadores</a>
+                        <a href="../pages/players.html">Jogadores</a>
                     </li>
                     <li>
-                        <a href="">Equipes</a>
+                        <a href="../pages/teams.html">Equipes</a>
                     </li>
                     <li>
-                        <a href="">Notícias</a>
+                        <a href="../index.html#news-section">Notícias</a>
                     </li>
                     <li>
-                        <a href="">Login</a>
+                        <a href="../pages/login.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -272,4 +274,5 @@
     </script>
 
 </body>
+
 </html>
