--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
             <div class="layout-grid flex">
                 <div class="contacts">
                     <div class="phone">
-                        <img src="../assets/icons/call.png" alt="Ícone do telefone">
+                        <img src="./assets/icons/call.png" alt="Ícone do telefone">
                         <span>(11) 0900-1010</span>
                     </div>
                     <div class="email">
-                        <img src="../assets/icons/sms.png" alt="Ícone do email">
+                        <img src="./assets/icons/sms.png" alt="Ícone do email">
                         <span>contato@gamer.com.br</span>
                     </div>
                 </div>
 
                 <div class="social-media">
                     <a href="">
-                        <img src="../assets/icons/Facebook.png" alt="Ícone do link do Facebook">
+                        <img src="./assets/icons/Facebook.png" alt="Ícone do link do Facebook">
                     </a>
                     <a href="">
-                        <img src="../assets/icons/Linkedin.png" alt="Ícone do link do Linkedin">
+                        <img src="./assets/icons/Linkedin.png" alt="Ícone do link do Linkedin">
                     </a>
                     <a href="">
-                        <img src="../assets/icons/Instagram.png" alt="Ícone do link do Instagram">
+                        <img src="./assets/icons/Instagram.png" alt="Ícone do link do Instagram">
                     </a>
                 </div>
             </div>
@@ -45,17 +45,17 @@
             <div class="layout-grid between-center-alignment">
 
                 <!-- hamburguer menu -->
-                <img onclick="mostrarMenu()" src="../assets/icons/Menu button of three horizontal lines.png"
+                <img onclick="mostrarMenu()" src="./assets/icons/Menu button of three horizontal lines.png"
                     class="hamburguer-menu" alt="Ícone para abrir e fechar o menu mobile">
 
                 <!-- logotype -->
                 <a href="">
-                    <img class="logo" src="../assets/images/Logo.png"
+                    <img class="logo" src="./assets/images/Logo.png"
                         alt="Logotipo da empresa Gamer. Texto Gamer com um joystick ao centro">
                 </a>
 
                 <!-- mobile lateral user menu -->
-                <img onclick="showUser()" src="../assets/icons/More.png" class="dots-menu"
+                <img onclick="showUser()" src="./assets/icons/More.png" class="dots-menu"
                     alt="Botão que abre e fecha o menu de usuário">
 
 
@@ -68,24 +68,24 @@
                     <!-- visível apenas no mobile -->
 
                     <a class="phone">
-                        <img src="../assets/icons/call.png" alt="Ícone do telefone">
+                        <img src="./assets/icons/call.png" alt="Ícone do telefone">
                         <span>(11) 0900-1010</span>
                     </a>
                     <a class="email">
-                        <img src="../assets/icons/sms.png" alt="Ícone do email">
+                        <img src="./assets/icons/sms.png" alt="Ícone do email">
                         <span>contato@gamer.com.br</span>
                     </a>
 
 
                     <div class="social-media">
                         <a href="">
-                            <img src="../assets/icons/Facebook.png" alt="Ícone do link do Facebook">
+                            <img src="./assets/icons/Facebook.png" alt="Ícone do link do Facebook">
                         </a>
                         <a href="">
-                            <img src="../assets/icons/Linkedin.png" alt="Ícone do link do Linkedin">
+                            <img src="./assets/icons/Linkedin.png" alt="Ícone do link do Linkedin">
                         </a>
                         <a href="">
-                            <img src="../assets/icons/Instagram.png" alt="Ícone do link do Instagram">
+                            <img src="./assets/icons/Instagram.png" alt="Ícone do link do Instagram">
                         </a>
                     </div>
 
@@ -95,13 +95,13 @@
 
                 <div class="user-menu" id="menu-user">
                     <a href="">
-                        <img src="../assets/icons/User.png" alt="ícone do usuário">
+                        <img src="./assets/icons/User.png" alt="ícone do usuário">
                     </a>
                     <a href="">
-                        <img src="../assets/icons/Shopping bag.png" alt="ícone da sacola">
+                        <img src="./assets/icons/Shopping bag.png" alt="ícone da sacola">
                     </a>
                     <a href="">
-                        <img src="../assets/icons/Loupe.png" alt="ícone de pesquisa">
+                        <img src="./assets/icons/Loupe.png" alt="ícone de pesquisa">
                     </a>
                 </div>
             </div>
@@ -118,8 +118,8 @@
         </section>
 
         <section class="games">
-            <img src="../assets/images/fifa23.png" alt="Imagem do jogo Fifa 23">
-            <img src="../assets/images/cszin.png" alt="Imagem do jogo Counter Strike">
+            <img src="./assets/images/fifa23.png" alt="Imagem do jogo Fifa 23">
+            <img src="./assets/images/cszin.png" alt="Imagem do jogo Counter Strike">
         </section>
 
         <section class="info">
@@ -132,10 +132,10 @@
                 <div class="cards-container">
 
                     <div class="first-card-container">
-                        <img class="killjoy" src="../assets/images/killjoy.png"
+                        <img class="killjoy" src="./assets/images/killjoy.png"
                             alt="Personagem do jogo Valorant Killjoy">
                         <article class="card">
-                            <img class="card-icon" src="../assets/icons/Video console.png" alt="Icone de joystick">
+                            <img class="card-icon" src="./assets/icons/Video console.png" alt="Icone de joystick">
                             <h3 class="card-title">20 jogos diferentes</h3>
                             <p class="card-text">São mais de 20 jogos em 2 plataformas dispóniveis para que você possa
                                 aprender melhores técnicas.</p>
@@ -143,10 +143,10 @@
                     </div>
 
                     <div class="second-card-container">
-                        <img class="jinx" src="../assets/images/jinx.png"
+                        <img class="jinx" src="./assets/images/jinx.png"
                             alt="Personagem do jogo League of Legends Jinx ">
                         <article class="card">
-                            <img class="card-icon" src="../assets/icons/Gamer.png" alt="Icone de joagdor">
+                            <img class="card-icon" src="./assets/icons/Gamer.png" alt="Icone de joagdor">
                             <h3 class="card-title">53 professores</h3>
                             <p class="card-text">Temos 53 Proplayers no nosso time para ensinar todas as estratégias,
                                 você
@@ -169,7 +169,7 @@
 
                 <div class="layout-boxes">
                     <article class="box-1">
-                        <img class="box-image-1" src="../assets/images/estudio-riot-games.png"
+                        <img class="box-image-1" src="./assets/images/estudio-riot-games.png"
                             alt="Imagem do estudio da Riot Games">
                         <h3 class="box-title-1">New's Title</h3>
                         <p class="box-text-1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -177,7 +177,7 @@
                     </article>
 
                     <article class="box-2">
-                        <img class="box-image-2" src="../assets/images/ss-e-sports.png"
+                        <img class="box-image-2" src="./assets/images/ss-e-sports.png"
                             alt="Imagem da equipe SS E-Sports">
                         <h3 class="box-title-2">New's Title</h3>
                         <p class="box-text-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -185,14 +185,14 @@
                     </article>
 
                     <article class="box-3">
-                        <img class="box-image-3" src="../assets/images/loud.png" alt="Imagem da equipe Loud">
+                        <img class="box-image-3" src="./assets/images/loud.png" alt="Imagem da equipe Loud">
                         <h3 class="box-title-3">New's Title</h3>
                         <p class="box-text-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                             Lorem Ipsum has been the industry's standard dummy text ever since.</p>
                     </article>
 
                     <article class="box-4">
-                        <img class="box-image-4" src="../assets/images/vct-br-22.png"
+                        <img class="box-image-4" src="./assets/images/vct-br-22.png"
                             alt="Imagem da arena da Valorant Champions Tour 2022">
                         <h3 class="box-title-4">New's Title</h3>
                         <p class="box-text-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -200,7 +200,7 @@
                     </article>
 
                     <article class="box-1">
-                        <img class="box-image-1" src="../assets/images/estudio-riot-games.png"
+                        <img class="box-image-1" src="./assets/images/estudio-riot-games.png"
                             alt="Imagem do estudio da Riot Games">
                         <h3 class="box-title-1">New's Title</h3>
                         <p class="box-text-1">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -208,7 +208,7 @@
                     </article>
 
                     <article class="box-2">
-                        <img class="box-image-2" src="../assets/images/ss-e-sports.png"
+                        <img class="box-image-2" src="./assets/images/ss-e-sports.png"
                             alt="Imagem da equipe SS E-Sports">
                         <h3 class="box-title-2">New's Title</h3>
                         <p class="box-text-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -216,14 +216,14 @@
                     </article>
 
                     <article class="box-3">
-                        <img class="box-image-3" src="../assets/images/loud.png" alt="Imagem da equipe Loud">
+                        <img class="box-image-3" src="./assets/images/loud.png" alt="Imagem da equipe Loud">
                         <h3 class="box-title-3">New's Title</h3>
                         <p class="box-text-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                             Lorem Ipsum has been the industry's standard dummy text ever since.</p>
                     </article>
 
                     <article class="box-4">
-                        <img class="box-image-4" src="../assets/images/vct-br-22.png"
+                        <img class="box-image-4" src="./assets/images/vct-br-22.png"
                             alt="Imagem da arena da Valorant Champions Tour 2022">
                         <h3 class="box-title-4">New's Title</h3>
                         <p class="box-text-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
@@ -240,7 +240,7 @@
     <footer>
         <div class="layout-grid footer-top">
             <div id="about">
-                <img src="../assets/images/Logo.png" class="logotype"
+                <img src="./assets/images/Logo.png" class="logotype"
                     alt="Logotipo da empresa Gamer. Texto Gamer com um joystick ao centro">
 
                 <p>Nosso sucesso na criação de soluções de negócios se deve em grande parte à nossa equipe talentosa
@@ -249,13 +249,13 @@
 
                 <div class="social-media-footer">
                     <a href="">
-                        <img src="../assets/icons/icons-footer/facebook-footer.png" alt="Ícone do link do Facebook">
+                        <img src="./assets/icons/icons-footer/facebook-footer.png" alt="Ícone do link do Facebook">
                     </a>
                     <a href="">
-                        <img src="../assets/icons/icons-footer/linkedin-footer.png" alt="Ícone do link do Linkedin">
+                        <img src="./assets/icons/icons-footer/linkedin-footer.png" alt="Ícone do link do Linkedin">
                     </a>
                     <a href="">
-                        <img src="../assets/icons/icons-footer/insta-footer.png" alt="Ícone do link do Instagram">
+                        <img src="./assets/icons/icons-footer/insta-footer.png" alt="Ícone do link do Instagram">
                     </a>
                 </div>
             </div>
@@ -323,7 +323,7 @@
         <div class="layout-grid footer-bottom">
 
             <button onclick="clickReturnTop()" class="return-top-button yellow-button">
-                <img src="../assets/icons/icons-footer/back-to-top.svg"
+                <img src="./assets/icons/icons-footer/back-to-top.svg"
                     alt="Uma seta que aponta para cima e indica um botão de retorno para o topo da página">
             </button>
 
