--- a/pages/players.html
+++ b/pages/players.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/players-style.css">
-    <link rel="stylesheet" href="/styles/players-desktop-style.css" media="(min-width: 1024px)">
+    <link rel="stylesheet" href="../styles/players-style.css">
+    <link rel="stylesheet" href="../styles/players-desktop-style.css" media="(min-width: 1024px)">
     <title>Cadastro de Jogadores - Projeto Gamer</title>
 </head>
 
