Adicionado link no logotipo do Login

--- a/pages/login.html
+++ b/pages/login.html
@@ -49,7 +49,7 @@
                     class="hamburguer-menu" alt="Ícone para abrir e fechar o menu mobile">
 
                 <!-- logotype -->
-                <a href="">
+                <a href=""../index.html">
                     <img class="logo" src="../assets/images/Logo.png"
                         alt="Logotipo da empresa Gamer. Texto Gamer com um joystick ao centro">
                 </a>
